Everything but the birth date.

--- a/XamlBrewer.Uwp.SqLiteSample/XamlBrewer.Uwp.SqLiteSample.csproj
+++ b/XamlBrewer.Uwp.SqLiteSample/XamlBrewer.Uwp.SqLiteSample.csproj
@@ -103,7 +103,14 @@
       <DependentUpon>MainPage.xaml</DependentUpon>
     </Compile>
     <Compile Include="Models\Person.cs" />
+    <Compile Include="Mvvm\BindableBase.cs" />
+    <Compile Include="Mvvm\BooleanNegationConverter.cs" />
+    <Compile Include="Mvvm\BooleanToVisibilityConverter.cs" />
+    <Compile Include="Mvvm\DelegateCommand.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="ViewModels\MainPageViewModel.cs" />
+    <Compile Include="ViewModels\PersonViewModel.cs" />
+    <Compile Include="ViewModels\ViewModelBase.cs" />
   </ItemGroup>
   <ItemGroup>
     <AppxManifest Include="Package.appxmanifest">
