--- a/XamlBrewer.Uwp.SqLiteSample/XamlBrewer.Uwp.SqLiteSample.csproj
+++ b/XamlBrewer.Uwp.SqLiteSample/XamlBrewer.Uwp.SqLiteSample.csproj
@@ -107,6 +107,7 @@
     <Compile Include="Mvvm\BooleanNegationConverter.cs" />
     <Compile Include="Mvvm\BooleanToVisibilityConverter.cs" />
     <Compile Include="Mvvm\DelegateCommand.cs" />
+    <Compile Include="Mvvm\StringFormatConverter.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="ViewModels\MainPageViewModel.cs" />
     <Compile Include="ViewModels\PersonViewModel.cs" />
